<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">模界</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="login_username">输入账号</string>
	<string name="login_password">输入密码</string>
	<string name="login_forget">忘记密码？</string>
	<string name="login_skip">跳过登录</string>
	<string name="register_title">快速注册</string>
	<string name="register_username">输入账号</string>
	<string name="register_tel">输入手机号码</string>
	<string name="register_code">输入验证码</string>
	<string name="register_pwd">输入密码</string>
	<string name="register_pwd_confirm">输入确认密码</string>
	<string name="register_checkBox_agree">已阅读并同意</string>
	<string name="register_agreement">《会员注册服务协议》</string>
	<string name="about_content">这是about，内容String</string>
	<string name="mine_title">我的</string>
	<string name="prove_name_title">身份认证</string>
	<string name="prove_name_name">输入姓名</string>
	<string name="prove_name_ID">输入身份证号</string>
	<string name="prove_mobile_title">手机认证</string>
	<string name="prove_mobile_num">输入手机号码</string>
	<string name="prove_mobile_code">输入验证码</string>
	<string name="myjiebao_title">我的接包</string>
	<string name="myfabao_title">我的发包</string>
	<string name="loginpwd_update_title">修改登录密码</string>
	<string name="paypwd_update_title">修改支付密码</string>
	<string name="tradingpwd_update_title">修改交易密码</string>
	<string name="findpwd_title">找回登录密码</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">最后更新时间：</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="myresume_title">我的简历</string>
    <string name="project_title">项目经验</string>
    <string name="add_project_title">编辑项目经验</string>
    <string name="bank_card_title">银行卡</string>
    <string name="fabao_title">发包</string>
    <string name="communication_title">交流</string>
    <string name="info_title">资讯</string>
    <string name="myletter_title">我的站内信</string>
    <string name="woyaofabao_title">我要发包</string>
    <string name="woyaozixun_title">我要咨询</string>
    <string name="expert_title">专家库</string>
    <string name="task_overview_title">任务概述</string>
    <string name="pay_title">支付</string>
    <string name="pay_money_hint">输入金额</string>
    <string name="task_details_title">任务详情</string>
    <string name="myresume_add_people_hint">输入联系人</string>
    <string name="myresume_add_company_hint">输入企业名称</string>
    <string name="myresume_add_mobile_hint">输入联系手机</string>
    <string name="myresume_add_qq_hint">输入联系QQ</string>
    <string name="myresume_add_email_hint">输入联系E-mail</string>
    <string name="myresume_add_job_hint">输入职业状态</string>
    <string name="myresume_add_experience_hint">输入行业经验</string>
    <string name="myresume_add_address_hint">输入通讯地址</string>
    <string name="myresume_add_idnumber_hint">个人:身份证号/企业:营业执照号码</string>
    <string name="recharge_title">充值</string>
    <string name="payway_title">支付方式</string>
    <string name="alipay_title">支付</string>
    <string name="again_exit">再按一次退出APP</string>
    <string name="myresume_add_experience">请选择行业经验</string>
    <string name="spinner_shang">请选择打赏金额</string>
    <string name="spinner_province">请选择所在的省份</string>
    <string name="spinner_city">请选择所在的城市</string>
    <string name="add_bankcard_title">添加银行卡</string>
    <string name="add_bankcard_type">请选择银行卡类型</string>
</resources>
