<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tradingpwd_update_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp" 
        android:background="@drawable/title_short">
        <ImageView
            android:id="@+id/btn_tradingpwd_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_btn"
            android:clickable="true" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tradingpwd_update_title"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_bg"
        android:orientation="vertical" >
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" >
        <EditText
            android:id="@+id/tradingpwd_update_psw"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@drawable/input_bg"
            android:hint="@string/register_pwd"
            android:password="true"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="13dp" />
	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp" >
        <EditText
            android:id="@+id/tradingpwd_update_psw_confirm"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@drawable/input_bg"
            android:hint="@string/register_pwd_confirm"
            android:password="true"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="13dp" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="45dip"
            android:layout_height="fill_parent" />

        <Button
            android:id="@+id/tradingpwd_update_submit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/submit" />

        <View
            android:layout_width="45dip"
            android:layout_height="fill_parent" />
    </LinearLayout>
    </LinearLayout>
    
</LinearLayout>